gcc/testsuite/gnat.dg/include.adb
-- { dg-do compile } */
-- { dg-options "-cargs -I -gnatws" }

-- { dg-error "search directory missing" "" { target *-*-* } 0 }
